--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins"> -->
 </head>
 
 <style>
@@ -165,7 +165,7 @@
     <div class="w3-container" id="walkways" style="margin-top:75px">
       <h1 class="w3-xxxlarge w3-text-green"><b>Walkways and Footbridges</b></h1>
       <hr style="width:50px;border:5px green" class="w3-round">
-      <p>We make custom walkways and footbridges for over rivers, drains, farms, height, construction sites, domestic
+      <p>Custom walkways and footbridges for over rivers, drains, farms, height, construction sites, domestic
         and for other uses.
         <br><br>
         Features include self-closing spring action gates, safety handrail, non-slip surface, galvanising and more
