--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="index.css">
-  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins"> -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+  <!-- The above line requests code that is the same as what is in fonts.css -->
 </head>
 
 <style>
@@ -63,7 +64,7 @@
       <a href="#fueltankstands" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Fuel Tank Stands</a>
       <a href="#walkways" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Walkways &amp;
         Footbridges</a>
-      <a href="#whatwedo" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">What We Do</a>
+      <a href="#whatwedo" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Safety Products</a>
       <a href="#contactus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
     </div>
   </nav>
@@ -88,29 +89,6 @@
       <hr style="width:50px;border:5px green" class="w3-round">
     </div>
 
-    <!-- Photo grid (modal)
-  <div class="w3-row-padding">
-    <div class="w3-half">
-      <img src="Images/structuralsteel.jpg" style="width:100%" onclick="onClick(this)" alt="Structural Steel">
-      <img src="Images/steelfabrication.jpg" style="width:100%" onclick="onClick(this)" alt="Steel Fabrication">
-    </div>
-
-    <div class="w3-half">
-      <img src="Images/farmShed.jpg" style="width:100%" onclick="onClick(this)" alt="Farm Shed">
-      <img src="Images/industrialBuildingInterior.jpg" style="width:100%" onclick="onClick(this)" alt="Industrial Building">
-    </div>
-  </div>
-
-     Modal for full size images on click
-  <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
-    <span class="w3-button w3-black w3-xxlarge w3-display-topright">×</span>
-    <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-      <img id="img01" class="w3-image">
-      <p id="caption"></p>
-    </div>
-  </div>
-    
-    -->
 
 
     <!-- About Us -->
@@ -121,16 +99,18 @@
         Mervyn Greene Engineering have been in business for almost 30 years. We work on all aspects of steel work - from
         the design stage, all the way through to erection of the finished product.
         <br><br>
-        Our fabrication is done in house by MGE employees to ensure of the highest standard.<br><br>
-        We conform to CE marking regulations 1090-1:2009+A1:2011. MGE Products, Multi-Safe Tank Stands, Structural Steel
+        We do not allow convention limit what we can do. We gladly deliver on the most ambitious projects requiring
+        novel, innovative solutions and new ways of doing things.
+        <br><br>
+        With supplier relationships built over many years, we use the best materials and
+        fabrication processes.
+        Our fabrication is done in house by MGE employees to ensure of the highest standard conforming to CE marking
+        regulations 1090-1:2009+A1:2011.
+        MGE Products, Multi-Safe Tank Stands, Structural Steel
         Manufacturing and Factory Processes are also CE certified.
         <br>
         <br>
-        We have built relationships with our suppliers over many years, this helps us use the best materials and
-        fabrication processes.
-        <br>
-        <br>
-        We work with you to create custom solutions for whatever you need. Our customers range from private households
+        MGE work with you to create custom solutions for whatever you need. Our customers range from private households
         to large construction firms.
       </p>
     </div>
@@ -160,6 +140,13 @@
       <br>
     </div>
 
+    <h1>Space for later</h1>
+    <p>Industrial - We design, supply and fit industrial buildings. We start with the structual steel and go the whole
+      way to
+      completion with roofing, cladding and flashings.
+      <br></p>
+    <p>Farm - MGE builds farm building solutions to your specifications. We incorporate crushes, slurry pits or any
+      other internal structures that are already present or planned for.</p>
 
     <!-- Walkways and Footbridges -->
     <div class="w3-container" id="walkways" style="margin-top:75px">
@@ -177,7 +164,7 @@
 
     <!-- What we do -->
     <div class="w3-container" id="whatwedo" style="margin-top:75px">
-      <h1 class="w3-xxxlarge w3-text-green"><b>What We Do</b></h1>
+      <h1 class="w3-xxxlarge w3-text-green"><b>Safety Products</b></h1>
       <hr style="width:50px;border:5px green" class="w3-round">
     </div>
     <!-- The Team -->
@@ -188,34 +175,36 @@
           <div class="w3-container">
 
             <br>
-            <h3>Safety Products</h3>
-            <p class="w3-opacity">Custom Solutions</p>
-            <p>MGE innovates to prevent falling from heights - Walkways, bridges, railings, guards, etc.</p>
+            <h3 class="w3-opacity">Fall Prevention</h3>
+            <p>Prevent falling through clear panels with our safety grid.</p>
           </div>
         </div>
       </div>
 
       <div class="w3-col m4 w3-margin-bottom">
         <div class="w3-light-grey">
-          <img src="Images/industrialBuildingInterior.jpg" alt="Industrial Building" style="width:100%">
+          <img src="Images/walkway.png" alt="Industrial Building" style="width:100%">
           <div class="w3-container">
-            <h3>Industrial</h3>
-            <p class="w3-opacity">Industrial</p>
-            <p>We design, supply and fit industrial buildings. We start with the structual steel and go the whole way to
-              completion with roofing, cladding and flashings.
-              <br></p>
+            <h3 class="w3-opacity">Walkways & Footbridges</h3>
+            <!-- <p class="w3-opacity">Walkways & Footbridges</p> -->
+            <p>Custom walkways and footbridges for over rivers, drains, farms, height, construction sites, domestic
+              and for other uses.
+              <br>
+              Features include: Self-closing gates, safety handrail, non-slip surface, galvanising and more.
           </div>
         </div>
       </div>
 
       <div class="w3-col m4 w3-margin-bottom">
         <div class="w3-light-grey">
-          <img src="Images/farmShed.jpg" alt="Farm Shed" style="width:100%">
+          <img src="Images/IMG_0727.JPG" alt="Farm Shed" style="width:100%">
           <div class="w3-container">
-            <h3>Farm</h3>
-            <p class="w3-opacity">Agricultural</p>
-            <p>MGE builds farm building solutions to your specifications. We incorporate crushes, slurry pits or any
-              other internal structures that are already present or planned for.</p>
+            <h3 class="w3-opacity">Custom Solutions</h3>
+            <p>Whatever the problem, whatever your vision, we have the strongest track record of delivering solutions.
+              <br>
+              We deliver in tight access areas, at height and gladly bring solutions to ambitious projects.<br>
+            </p>
+
           </div>
         </div>
       </div>
@@ -226,7 +215,7 @@
       <h1 class="w3-xxxlarge w3-text-green"><b>Contact Us</b></h1>
       <hr style="width:50px;border:5px green" class="w3-round">
       <br>
-      <p>Get in touch to discuss how we can help on your next project.
+      <p>Get in touch to discuss how we can deliver on your next project.
         <br><br>
         Mervyn Greene Engineering,<br>
         Teemore Industrial Estate, <br>
