--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
 
 
     <!-- About Us -->
-    <div class="w3-container" id="aboutus" style="margin-top:75px">
-      <h1 class="w3-xxxlarge w3-text-green"><b>About Us</b></h1>
-      <hr style="width:50px;border:5px green" class="w3-round">
+    <div class="w3-container" 
+    id="aboutus" style="margin-top:75px">
+      <!-- <h1 class="w3-xxxlarge w3-text-green"><b>About Us</b></h1> -->
+      <!-- <hr style="width:50px;border:5px green" class="w3-round"> -->
       <p>
         Mervyn Greene Engineering have been in business for almost 30 years. We work on all aspects of steel work - from
         the design stage, all the way through to erection of the finished product.
