--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- Header -->
     <div class="w3-container" style="margin-top:80px" id="showcase">
       <h1 class="w3-jumbo"><b>Mervyn Greene Engineering</b></h1>
-      <h1 class="w3-xxxlarge w3-text-green"><b>Structural Steel. Fuel Tank Stands. Custom Solutions.</b></h1>
+      <h1 class="w3-xxxlarge w3-text-green"><b>Structural Steel.<br>Fuel Tank Stands.<br><u>Custom Solutions.</u></b></h1>
       <hr style="width:50px;border:5px green" class="w3-round">
     </div>
 
@@ -118,23 +118,66 @@
 
     <!-- Fuel Tank Stands -->
     <div class="w3-container" id="fueltankstands" style="margin-top:75px">
-      <h1 class="w3-xxxlarge w3-text-green"><b>Fuel Tank Stands.</b></h1>
+      <h1 class="w3-xxxlarge w3-text-green"><b>Fuel Tank Stands</b></h1>
       <hr style="width:50px;border:5px green" class="w3-round">
-      <h2>Industrial. Domestic. Custom.</h2>
       <p>MGE developed Fuel Tank Stands for diesel tanks, domestic oil tanks and also build based on your requirements.
         All tank stands are galvanised and include fittings and necessary equiptment. Our tank stands are used in farm
         yards, construction sites, machinery yards and domestically. Slide out stairs ensure safety and ease of access.
         <br>
         <br>
         We make stands to cater for one, two or three diesel tanks.
-        Delivery or collection are available.
-        Stands can be made for your specific tank and height requirements. Call us to discuss your best option.
+        <ul>
+          <li>Galvanised</li>
+          <li>Custom height, width, dimenstions available.</li>
+        </ul>
+
       </p>
       <p>
         <br>
         This product was featured in the <a class="w3-large w3-text-green"
           href="https://www.independent.ie/business/farming/fuel-tank-stand-tops-tullamore-26764445.html">Irish
           Independent</a> and the Irish Farmers Journal after winning awards for innovation and safety.</p>
+
+
+          <div id="withABorder">
+            <h2>Domestic Oil Tank Stands</h2>
+            <img src="images/domesticOilTankStand.jpg">
+          </div>
+
+          <div id="withABorder">
+            <h2>For Farm & Industry</h2>
+            <img src="images/fuelTankStandDouble.png">
+          </div>
+
+          <div id="withABorder">
+            <h2>Full Service Unit</h2>
+            <ul>
+              <li>Fuel Tank Stand</li>
+              <li>Power Washer</li>
+              <li></li>
+            </ul>
+            <img style="width:80%" src="images/Screenshot 2020-02-08 at 13.48.19.png">
+          </div>
+
+
+             <!-- Photo grid (modal) -->
+    <div class="w3-row-padding">
+
+      <div class="w3-half">
+        <img src="/images/Screenshot 2020-02-08 at 13.48.19.png" style="width:100%" onclick="onClick(this)" alt="Windows for the atrium">
+      </div>
+    </div>
+
+    <!-- Modal for full size images on click -->
+    <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
+      <span class="w3-button w3-black w3-xxlarge w3-display-topright">×</span>
+      <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+        <img id="img01" class="w3-image">
+        <p id="caption"></p>
+      </div>
+    </div>
+
+<br><br>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/nKHeRURSIUY?start=6" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </p>
@@ -150,7 +193,7 @@
       other internal structures that are already present or planned for.</p>
 
     <!-- Walkways and Footbridges -->
-    <div class="w3-container" id="walkways" style="margin-top:75px">
+    <!-- <div class="w3-container" id="walkways" style="margin-top:75px">
       <h1 class="w3-xxxlarge w3-text-green"><b>Walkways and Footbridges</b></h1>
       <hr style="width:50px;border:5px green" class="w3-round">
       <p>Custom walkways and footbridges for over rivers, drains, farms, height, construction sites, domestic
@@ -160,7 +203,7 @@
         depending on what is needed.
       </p>
       <img src="Images/walkway.png" alt="Walkways and Footbridges">
-    </div>
+    </div> -->
 
 
     <!-- What we do -->
