Big design change on. Pulling in new files.

--- a/index.html
+++ b/index.html
@@ -1,322 +1,172 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Retrospect by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
+<html>
+	<head>
+		<title>Retrospect by TEMPLATED</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body class="landing">
 
-<head>
-  <title>Mervyn Greene Engineering - Fuel Tank Stands, Structural Steel</title>
-  <meta name="description"
-    content="Mervyn Greene Engineering - Structural steel, fuel tank stands, safety and custom solutions. Operating in Dublin and Leinster. Delivery to the rest of Ireland. " />
+		<!-- Header -->
+			<header id="header" class="alt">
+				<h1><a href="index.html">Retrospect</a></h1>
+				<a href="#nav">Menu</a>
+			</header>
 
-  <!--  Code to send site data to Google Analytics. Global site tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143931677-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'UA-143931677-1');
-  </script>
+		<!-- Nav -->
+			<nav id="nav">
+				<ul class="links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="generic.html">Generic</a></li>
+					<li><a href="elements.html">Elements</a></li>
+				</ul>
+			</nav>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="index.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-  <!-- The above line requests code that is the same as what is in fonts.css -->
-</head>
+		<!-- Banner -->
+			<section id="banner">
+				<i class="icon fa-diamond"></i>
+				<h2>Etiam adipiscing</h2>
+				<p>Magna feugiat lorem dolor egestas</p>
+				<ul class="actions">
+					<li><a href="#" class="button big special">Learn More</a></li>
+				</ul>
+			</section>
 
-<style>
-  body,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5 {
-    font-family: "Poppins", sans-serif
-  }
+		<!-- One -->
+			<section id="one" class="wrapper style1">
+				<div class="inner">
+					<article class="feature left">
+						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<div class="content">
+							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
+							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<ul class="actions">
+								<li>
+									<a href="#" class="button alt">More</a>
+								</li>
+							</ul>
+						</div>
+					</article>
+					<article class="feature right">
+						<span class="image"><img src="images/pic02.jpg" alt="" /></span>
+						<div class="content">
+							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
+							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<ul class="actions">
+								<li>
+									<a href="#" class="button alt">More</a>
+								</li>
+							</ul>
+						</div>
+					</article>
+				</div>
+			</section>
 
-  body {
-    font-size: 16px;
-  }
+		<!-- Two -->
+			<section id="two" class="wrapper special">
+				<div class="inner">
+					<header class="major narrow">
+						<h2>Aliquam Blandit Mauris</h2>
+						<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
+					</header>
+					<div class="image-grid">
+						<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
+					</div>
+					<ul class="actions">
+						<li><a href="#" class="button big alt">Tempus Aliquam</a></li>
+					</ul>
+				</div>
+			</section>
 
-  .w3-half img {
-    margin-bottom: -6px;
-    margin-top: 16px;
-    opacity: 0.8;
-    cursor: pointer
-  }
+		<!-- Three -->
+			<section id="three" class="wrapper style3 special">
+				<div class="inner">
+					<header class="major narrow	">
+						<h2>Magna sed consequat tempus</h2>
+						<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
+					</header>
+					<ul class="actions">
+						<li><a href="#" class="button big alt">Magna feugiat</a></li>
+					</ul>
+				</div>
+			</section>
 
-  .w3-half img:hover {
-    opacity: 1
-  }
-</style>
+		<!-- Four -->
+			<section id="four" class="wrapper style2 special">
+				<div class="inner">
+					<header class="major narrow">
+						<h2>Get in touch</h2>
+						<p>Ipsum dolor tempus commodo adipiscing</p>
+					</header>
+					<form action="#" method="POST">
+						<div class="container 75%">
+							<div class="row uniform 50%">
+								<div class="6u 12u$(xsmall)">
+									<input name="name" placeholder="Name" type="text" />
+								</div>
+								<div class="6u$ 12u$(xsmall)">
+									<input name="email" placeholder="Email" type="email" />
+								</div>
+								<div class="12u$">
+									<textarea name="message" placeholder="Message" rows="4"></textarea>
+								</div>
+							</div>
+						</div>
+						<ul class="actions">
+							<li><input type="submit" class="special" value="Submit" /></li>
+							<li><input type="reset" class="alt" value="Reset" /></li>
+						</ul>
+					</form>
+				</div>
+			</section>
 
-<body>
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="#" class="icon fa-facebook">
+							<span class="label">Facebook</span>
+						</a></li>
+						<li><a href="#" class="icon fa-twitter">
+							<span class="label">Twitter</span>
+						</a></li>
+						<li><a href="#" class="icon fa-instagram">
+							<span class="label">Instagram</span>
+						</a></li>
+						<li><a href="#" class="icon fa-linkedin">
+							<span class="label">LinkedIn</span>
+						</a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; Untitled.</li>
+						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
+						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
+					</ul>
+				</div>
+			</footer>
 
-  <!-- Sidebar/menu -->
-  <nav class="w3-sidebar w3-green w3-collapse w3-top w3-large w3-padding"
-    style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
-    <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft"
-      style="width:100%;font-size:22px">Close Menu</a>
-    <div class="w3-container">
-      <h3 class="w3-padding-64"><b>Mervyn Greene Engineering</b></h3>
-    </div>
-    <div class="w3-bar-block">
-      <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
-      <a href="#aboutus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">About Us</a>
-      <a href="#fueltankstands" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Fuel Tank Stands</a>
-      <a href="#walkways" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Walkways &amp;
-        Footbridges</a>
-      <a href="#whatwedo" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Safety Products</a>
-      <a href="#contactus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
-    </div>
-  </nav>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
 
-  <!-- Top menu on small screens -->
-  <header class="w3-container w3-top w3-hide-large w3-green w3-xlarge w3-padding">
-    <a href="javascript:void(0)" class="w3-button w3-green w3-margin-right" onclick="w3_open()">☰</a>
-    <span>Mervyn Greene Engineering</span>
-  </header>
-
-  <!-- Overlay effect when opening sidebar on small screens -->
-  <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu"
-    id="myOverlay"></div>
-
-  <!-- !PAGE CONTENT! -->
-  <div class="w3-main" style="margin-left:340px;margin-right:40px">
-
-    <!-- Header -->
-    <div class="w3-container" style="margin-top:80px" id="showcase">
-      <h1 class="w3-jumbo"><b>Mervyn Greene Engineering</b></h1>
-      <h1 class="w3-xxxlarge w3-text-green"><b>Structural Steel.<br>Fuel Tank Stands.<br><u>Custom Solutions.</u></b></h1>
-      <hr style="width:50px;border:5px green" class="w3-round">
-    </div>
-
-
-
-    <!-- About Us -->
-    <div class="w3-container" 
-    id="aboutus" style="margin-top:75px">
-      <!-- <h1 class="w3-xxxlarge w3-text-green"><b>About Us</b></h1> -->
-      <!-- <hr style="width:50px;border:5px green" class="w3-round"> -->
-      <p>
-        Mervyn Greene Engineering have been in business for almost 30 years. We work on all aspects of steel work - from
-        the design stage, all the way through to erection of the finished product.
-        <br><br>
-        We do not allow convention limit what we can do. We gladly deliver on the most ambitious projects requiring
-        novel, innovative solutions and new ways of doing things.
-        <br><br>
-        With supplier relationships built over many years, we use the best materials and
-        fabrication processes.
-        Our fabrication is done in house by MGE employees to ensure of the highest standard conforming to CE marking
-        regulations 1090-1:2009+A1:2011.
-        MGE Products, Multi-Safe Tank Stands, Structural Steel
-        Manufacturing and Factory Processes are also CE certified.
-        <br>
-        <br>
-        MGE work with you to create custom solutions for whatever you need. Our customers range from private households
-        to large construction firms.
-      </p>
-    </div>
-
-    <!-- Fuel Tank Stands -->
-    <div class="w3-container" id="fueltankstands" style="margin-top:75px">
-      <h1 class="w3-xxxlarge w3-text-green"><b>Fuel Tank Stands</b></h1>
-      <hr style="width:50px;border:5px green" class="w3-round">
-      <p>MGE developed Fuel Tank Stands for diesel tanks, domestic oil tanks and also build based on your requirements.
-        All tank stands are galvanised and include fittings and necessary equiptment. Our tank stands are used in farm
-        yards, construction sites, machinery yards and domestically. Slide out stairs ensure safety and ease of access.
-        <br>
-        <br>
-        We make stands to cater for one, two or three diesel tanks.
-        <ul>
-          <li>Galvanised</li>
-          <li>Custom height, width, dimenstions available.</li>
-        </ul>
-
-      </p>
-      <p>
-        <br>
-        This product was featured in the <a class="w3-large w3-text-green"
-          href="https://www.independent.ie/business/farming/fuel-tank-stand-tops-tullamore-26764445.html">Irish
-          Independent</a> and the Irish Farmers Journal after winning awards for innovation and safety.</p>
-
-
-          <div id="withABorder">
-            <h2>Domestic Oil Tank Stands</h2>
-            <img src="images/domesticOilTankStand.jpg">
-          </div>
-
-          <div id="withABorder">
-            <h2>For Farm & Industry</h2>
-            <img src="images/fuelTankStandDouble.png">
-          </div>
-
-          <div id="withABorder">
-            <h2>Full Service Unit</h2>
-            <ul>
-              <li>Fuel Tank Stand</li>
-              <li>Power Washer</li>
-              <li></li>
-            </ul>
-            <img style="width:80%" src="images/Screenshot 2020-02-08 at 13.48.19.png">
-          </div>
-
-
-             <!-- Photo grid (modal) -->
-    <div class="w3-row-padding">
-
-      <div class="w3-half">
-        <img src="/images/Screenshot 2020-02-08 at 13.48.19.png" style="width:100%" onclick="onClick(this)" alt="Windows for the atrium">
-      </div>
-    </div>
-
-    <!-- Modal for full size images on click -->
-    <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
-      <span class="w3-button w3-black w3-xxlarge w3-display-topright">×</span>
-      <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-        <img id="img01" class="w3-image">
-        <p id="caption"></p>
-      </div>
-    </div>
-
-<br><br>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/nKHeRURSIUY?start=6" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </p>
-      <br>
-    </div>
-
-    <h1>Space for later</h1>
-    <p>Industrial - We design, supply and fit industrial buildings. We start with the structual steel and go the whole
-      way to
-      completion with roofing, cladding and flashings.
-      <br></p>
-    <p>Farm - MGE builds farm building solutions to your specifications. We incorporate crushes, slurry pits or any
-      other internal structures that are already present or planned for.</p>
-
-    <!-- Walkways and Footbridges -->
-    <!-- <div class="w3-container" id="walkways" style="margin-top:75px">
-      <h1 class="w3-xxxlarge w3-text-green"><b>Walkways and Footbridges</b></h1>
-      <hr style="width:50px;border:5px green" class="w3-round">
-      <p>Custom walkways and footbridges for over rivers, drains, farms, height, construction sites, domestic
-        and for other uses.
-        <br><br>
-        Features include self-closing spring action gates, safety handrail, non-slip surface, galvanising and more
-        depending on what is needed.
-      </p>
-      <img src="Images/walkway.png" alt="Walkways and Footbridges">
-    </div> -->
-
-
-    <!-- What we do -->
-    <div class="w3-container" id="whatwedo" style="margin-top:75px">
-      <h1 class="w3-xxxlarge w3-text-green"><b>Safety Products</b></h1>
-      <hr style="width:50px;border:5px green" class="w3-round">
-    </div>
-    <!-- The Team -->
-    <div class="w3-row-padding w3-grayscale">
-      <div class="w3-col m4 w3-margin-bottom">
-        <div class="w3-light-grey">
-          <img src="Images/safetyProduct.jpg" alt="Safety Product" style="width:100%">
-          <div class="w3-container">
-
-            <br>
-            <h3 class="w3-opacity">Fall Prevention</h3>
-            <p>Prevent falling through clear panels with our safety grid.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="w3-col m4 w3-margin-bottom">
-        <div class="w3-light-grey">
-          <img src="Images/walkway.png" alt="Industrial Building" style="width:100%">
-          <div class="w3-container">
-            <h3 class="w3-opacity">Walkways & Footbridges</h3>
-            <!-- <p class="w3-opacity">Walkways & Footbridges</p> -->
-            <p>Custom walkways and footbridges for over rivers, drains, farms, height, construction sites, domestic
-              and for other uses.
-              <br>
-              Features include: Self-closing gates, safety handrail, non-slip surface, galvanising and more.
-          </div>
-        </div>
-      </div>
-
-      <div class="w3-col m4 w3-margin-bottom">
-        <div class="w3-light-grey">
-          <img src="Images/IMG_0727.JPG" alt="Farm Shed" style="width:100%">
-          <div class="w3-container">
-            <h3 class="w3-opacity">Custom Solutions</h3>
-            <p>Whatever the problem, whatever your vision, we have the strongest track record of delivering solutions.
-              <br>
-              We deliver in tight access areas, at height and gladly bring solutions to ambitious projects.<br>
-            </p>
-
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Contact -->
-    <div id="contactus">
-      <h1 class="w3-xxxlarge w3-text-green"><b>Contact Us</b></h1>
-      <hr style="width:50px;border:5px green" class="w3-round">
-      <br>
-      <p>Get in touch to discuss how we can deliver on your next project.
-        <br><br>
-        Mervyn Greene Engineering,<br>
-        Teemore Industrial Estate, <br>
-        Granard,<br>
-        Co. Longford.<br>
-        <br>
-        Office: +353436687690<br>
-        Mobile: +353868199646<br>
-        Email: mgreeneeng@gmail.com
-      </p>
-
-      <a href="https://www.facebook.com/MGEProduct/">
-        <img src="Images/facebookicon.png" alt="Link to MGE Products Facebook page"
-          style="width:42px;height:42px;border:0;">
-      </a>
-      <br>
-      <br>
-      <span id="siteseal">
-        <script async type="text/javascript"
-          src="https://seal.godaddy.com/getSeal?sealID=Spk3HPJT1hcyJ9AX0zJuPKdBdFLpR69vTEcZ4sEqrxaSkhySo52RXfGjgflm"></script>
-      </span>
-    </div>
-  </div>
-
-
-  <script>
-    // Script to open and close sidebar
-    function w3_open() {
-      document.getElementById("mySidebar").style.display = "block";
-      document.getElementById("myOverlay").style.display = "block";
-    }
-
-    function w3_close() {
-      document.getElementById("mySidebar").style.display = "none";
-      document.getElementById("myOverlay").style.display = "none";
-    }
-
-    // Modal Image Gallery
-    function onClick(element) {
-      document.getElementById("img01").src = element.src;
-      document.getElementById("modal01").style.display = "block";
-      var captionText = document.getElementById("caption");
-      captionText.innerHTML = element.alt;
-    }
-  </script>
-
-</body>
-
-<footer>
-
-  <!-- W3.CSS Container -->
-  <div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px">
-    <p class="w3-right">&copy; Mervyn Greene Engineering 2019<a href="https://www.w3schools.com/w3css/default.asp"
-        title="W3.CSS" target="_blank" class="w3-hover-opacity"></a></p>
-  </div>
-
-
-</footer>
-
+	</body>
 </html>
