--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1><a href="index.html">Retrospect</a></h1>
+				<!-- <h1><a href="index.html">Retrospect</a></h1> -->
 				<a href="#nav">Menu</a>
 			</header>
 
@@ -33,8 +33,8 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<i class="icon fa-diamond"></i>
-				<h2>Etiam adipiscing</h2>
+				<!-- <i class="icon fa-diamond"></i> -->
+				<h2>Mervyn Greene Engineering</h2>
 				<p>Magna feugiat lorem dolor egestas</p>
 				<ul class="actions">
 					<li><a href="#" class="button big special">Learn More</a></li>
