She's taking shape.

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 			<section id="banner">
 				<!-- <i class="icon fa-diamond"></i> -->
 				<h2>Mervyn Greene Engineering</h2>
-				<p>Magna feugiat lorem dolor egestas</p>
+				<p>Structural Steel<br>Fuel Tank Stands<br>Custom Solutions</p>
 				<ul class="actions">
-					<li><a href="#" class="button big special">Learn More</a></li>
+					<!-- <li><a href="#" class="button big special">Learn More</a></li> -->
 				</ul>
 			</section>
 
@@ -45,10 +45,10 @@
 			<section id="one" class="wrapper style1">
 				<div class="inner">
 					<article class="feature left">
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image"><img src="images/Industrial.png" alt="" /></span>
 						<div class="content">
-							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<h2>Industrial</h2>
+							<p>Design, supply and erection of Industrial Buildings. We start with the structual steel and go the whole way to completion with roofing, cladding and flashings.</p>
 							<ul class="actions">
 								<li>
 									<a href="#" class="button alt">More</a>
@@ -57,11 +57,22 @@
 						</div>
 					</article>
 					<article class="feature right">
-						<span class="image"><img src="images/pic02.jpg" alt="" /></span>
+						<span class="image"><img src="images/Mervyn_Greene_Product_Shoot_March_2017-26 copy.jpg" alt="" /></span>
 						<div class="content">
-							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
-							<ul class="actions">
+							<h2>Fuel Tank Stands</h2>
+							<p>MGE developed Fuel Tank Stands for diesel tanks, domestic oil tanks and also build based on your requirements. All tank stands are galvanised and include fittings and necessary equiptment. Our tank stands are used in farm yards, construction sites, machinery yards and domestically. Slide out stairs ensure safety and ease of access.
+								<br>
+								<br>
+								We make stands to cater for one, two or three diesel tanks.
+								Delivery or collection are available.
+								Stands can be made for your specific tank and height requirements. Call us to discuss your best option.
+								</p>
+								<p>
+								<br>
+								This product was featured in the <a class="w3-large w3-text-green" href="https://www.independent.ie/business/farming/fuel-tank-stand-tops-tullamore-26764445.html">Irish Independent</a> and the Irish Farmers Journal after winning awards for innovation and safety.</p> 
+								<p>A video of the fuel tank stand in action can be seen 
+								<a href="https://www.youtube.com/watch?v=nKHeRURSIUY"> here.</a>
+							</p>							<ul class="actions">
 								<li>
 									<a href="#" class="button alt">More</a>
 								</li>
