Taking shape, still.

--- a/safetyProducts.html
+++ b/safetyProducts.html
@@ -29,7 +29,7 @@
 		<ul class="links">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="fuelTankStands.html">Fuel Tank Stands</a></li>
-			<li><a href="safetyProducts.htmlgi">Safety Products</a></li>
+			<li><a href="safetyProducts.html">Safety Products</a></li>
 		</ul>
 	</nav>
 
@@ -38,30 +38,10 @@
 		<div class="container">
 
 			<header class="major special">
-				<h2>Fuel Tank Stands</h2>
+				<h2>Safety Products</h2>
 				<p>MGE's award winning Fuel Tank Stand Range</p>
 			</header>
 
-			<a href="#" class="image fit"><img src="images/Mervyn_Greene_Product_Shoot_March_2017-26 copy.jpg"
-					alt="" /></a>
-
-			<p><br><br>
-				MGE developed Fuel Tank Stands for diesel tanks, domestic oil tanks. We also build based on your specific
-				requirements. All tank stands are galvanised and include fittings and necessary equiptment. 
-				<br><br>
-				Our tank stands are used in farm yards, construction sites, machinery yards and domestically. Slide out stairs
-				ensure safety and ease of access. The Full Service Unit comes equipped with a power washer, air compressor, grease guns and equipment, storage area for tools and related items.
-				<br><br>
-				We make stands to cater for one, two or three diesel tanks. Delivery or collection are available. Stands
-				can be made for your specific tank and height requirements. Call us to discuss your best option.
-				<br><br>
-				This product was featured in the <a class="w3-large w3-text-green"
-					href="https://www.independent.ie/business/farming/fuel-tank-stand-tops-tullamore-26764445.html">Irish
-					Independent</a> and the Irish Farmers Journal after winning awards for innovation and
-				safety.</p>
-			<iframe width="100%" height="600px" margin="auto 0" src="https://www.youtube.com/embed/nKHeRURSIUY?start=5" frameborder="0"
-				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-				allowfullscreen></iframe>
 
 		</div>
 	</section>
