--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	<nav id="nav">
 		<ul class="links">
 			<li><a href="index.html">Mervyn Greene Engineering</a></li>
-			<li><a href="fuelTankStands.html.html">Fuel Tank Stands</a></li>
-			<!-- <li><a href="elements.html">Elements</a></li> -->
+			<li><a href="fuelTankStands.html">Fuel Tank Stands</a></li>
+			<li><a href="safetyProducts.html">Safety Products</a></li>
 		</ul>
 	</nav>
 
@@ -103,7 +103,7 @@
 
 
 			<article class="feature left">
-				<span class="image"><img src="images/Industrial.png" alt="" /></span>
+				<span class="image"><img src="images/walkway.png" alt="" /></span>
 				<div class="content">
 					<h2>Safety Products</h2>
 					<ul>
@@ -112,10 +112,11 @@
 						<li>Stairs</li>
 						<li>Ladders</li>
 						<li>Guards</li>
+						<li>Custom Solutions</li>
 					</ul>
 					<ul class="actions">
 						<li>
-							<a href="" class="button alt">Safety Products</a>
+							<a href="safetyProducts.html" class="button alt">Safety Products</a>
 						</li>
 					</ul>
 				</div>
